  to RequestPathFlowExecutorArgumentHandler.
  The flow controllers (FlowController, FlowAction, PortletFlowController and FlowPhaseListener) now
  use a FlowExecutorArgumentHandler instead of just a FlowExecutorArgumentExtractor. The corresponding
  "argumentExtractor" properties of the flow controllers were renamed to "argumentHandler".

Changes in version 1.0 RC4 (04.10.2006)
---------------------------------------

General
* Restructured codebase into distinct layers and subsystems upon in-depth SonarJ analysis of architecture.
  Notable restructuring:
  - Extracted stable "Flow Definition" API to webflow.definition package from root webflow package
  - Extracted stable "Flow Definition Registry" subsystem to webflow.definition.registry.
  - Extracted stable "Flow Execution" API to webflow.execution package from root webflow package.
  - Extracted stable "External Context" subsystem to webflow.context from root webflow package.
  - Extracted "Flow Execution Engine" implementation to webflow.engine package from root webflow package,
    decoupling stable Flow Definition, Flow Definition Registry, Flow Execution, Flow Execution Repository,
    and Flow Executor subsystems from the more volatile engine implementation.
  - Moved webflow.builder subsystem into the webflow.engine implementation package.
  - Extracted the XML-based Flow Builder into webflow.builder.xml sub package.
  - Extracted generic data structures into webflow.core.collection from root webflow package.
  - Extracted generic "Conversation Manager" subsystem into webflow.conversation from execution.repository.
  - Factored out test support code into "engine" and "execution" subpackages, for unit testing 
    flow artifacts and system testing flow executions respectively.
  Restructuring effort successfully reduced project average component dependency from 48 to 27 (45%), 
  largely by isolating and encapsulating the complexity of the Spring Web Flow engine implementation.